--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,8 +24,8 @@ thiserror = "1.0"
 pin-project = "1.0"
 
 [dev-dependencies]
-hyper = "0.14"
-warp = "0.3"
+hyper = { version = "0.14", default-features = false }
+warp = { version = "0.3", default-features = false }
 mime = "0.3.16"
 headers = "0.3.2"
 criterion = "0.3"
